# trading-strategy

./: .gitignore  config.yaml  engine.py  main.py  pyproject.toml  run_tests.py  test.pine
.github/instructions/: general.instructions.md  pinescript-development.instructions.md
core/: abstractions.py  exceptions.py  factory.py  models.py
data_sources/: __init__.py  csv_source.py  yfinance_source.py
indicators/: __init__.py  moving_averages.py  oscillators.py
strategies/: __init__.py  sma_crossover.py
tests/: test_core.py  test_data_sources.py  test_engine.py  test_indicators.py  test_utils.py  test_visualizers.py
utils/: cache.py  decorators.py  logging.py
visualizers/: __init__.py  mpl_visualizer.py
