[project]
name = "trading-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Mert Türker",email = "mertturker99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "yfinance (>=0.2.66,<0.3.0)"
]

[tool.poetry]
packages = [{include = "trading_engine", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
